# yaytarch

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  collections.py  collectionview.py  db.py  pyproject.toml  schema.sql  tools.py  videocollections.py  videoplay.py  videos.py
.github/workflows/: python-package.yml
model/: collection.py  collectionmodel.py  configurationmodel.py  video.py  videocollectionmembership.py  videocollectionrelmodel.py  videomodel.py
pycharmrunconfigs/.run/: Flask (__init__).run.xml  dl.run.xml
src/yaytarch/: __init__.py  __main__.py  cli.py  clibp.py  db.py  schema.sql  videocollections.py  videos.py  view.py
src/yaytarch/model/: collectionmodel.py  configurationmodel.py  videocollectionrelmodel.py  videomodel.py
src/yaytarch/model/db/: collectionmodel.py  configurationmodel.py  videocollectionrelmodel.py  videomodel.py
src/yaytarch/model/file/: jsonconfigmodel.py  jsonvideomodel.py
src/yaytarch/static/: style.css
src/yaytarch/templates/: collections.html  localvideolist.html  localvideoplay.html  videoplay.html
src/yaytarch/tools/: backup.py  config.py  urltools.py  videodownload.py
static/: style.css  w3.css
templates/: base.html  collections.html  videolist.html  videoplay.html
tools/: config.py  videodownload.py
